@@ -24,6 +24,7 @@ Bugs fixed:
 - 1780595 Fixed xml special chars are not escaped in error description
 - 1770841 Fixed one provider for multiple associations problem
 - 1784913 Fixed change filter handling
+- 1769471 Fixed multiple handlers do not work as expected
 
 Changes in 1.2.3
 ================
